# bigspot

./: LICENSE  README.md
src/: README.md
src/bigspot/: CMakeLists.txt  package.xml
src/bigspot/launch/: run_gazebo_only.launch  run_robot_real.launch
src/bigspot_controller/: CMakeLists.txt  package.xml
src/bigspot_controller/scripts/: robot_controller_gazebo_only.py  robot_controller_gazebo_real.py  robot_controller_real_servo.py
src/bigspot_description/: CMakeLists.txt  package.xml
src/bigspot_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
src/bigspot_description/meshes/: FLF_1.stl  FLF_미러__1.stl  FLL_1.stl  FLL_미러__1.stl  FLS_1.stl  FLS_미러__1.stl  FRF_1.stl  FRL_1.stl  FRS_1.stl  RFS_1.stl  RLF_1.stl  RLL_1.stl  RLS_1.stl  RRF_1.stl  RRL_1.stl  RRS_1.stl  base_link.stl
src/bigspot_description/urdf/: bigspot.gazebo  bigspot.trans  bigspot.xacro  materials.xacro
src/bigspot_joystick/: CMakeLists.txt  package.xml
src/bigspot_joystick/launch/: ramped_joystick.launch  ramped_keyboard.launch
src/bigspot_joystick/scripts/: ramped_joystick.py  ramped_keyboard.py
src/bigspot_lcd/: CMakeLists.txt  package.xml  setup.py
src/bigspot_lcd/launch/: lcd.launch
src/bigspot_lcd/scripts/: sm_lcd_driver.py  sm_lcd_node.py
src/bigspot_mpu6050/: CMakeLists.txt  package.xml
src/bigspot_mpu6050/launch/: mpu.launch
src/bigspot_mpu6050/scripts/: MPU6050.py  MPU6050_python.py  (+4 more)
src/bigspot_rgb/: CMakeLists.txt  package.xml
src/bigspot_ultrasonic/: CMakeLists.txt  package.xml  setup.py
supervisor/: autoconnect_ps4.sh
(+20 files in other folders)
