<?xml version="1.0"?>
<package format="2">
  <name>bigspot</name>
  <version>1.0.0</version>
  <description>The bigspot package</description>

  <maintainer email="dancal@empas.com">dancal</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
